--- a/views/board/list.html
+++ b/views/board/list.html
@@ -11,7 +11,7 @@
     {% for item in list%}
     <tr>
         <td>{{item.idx}}</td>
-        <td><a href="/board/view?idx={{idx}}">{{item.subject}}</a></td>
+        <td><a href="/board/view?idx={{item.idx}}">{{item.subject}}</a></td>
         <td>{{item.nickname}}</td>
         <td>{{item.date}}</td>
         <td>{{item.hit}}</td>
