--- a/views/board/view.html
+++ b/views/board/view.html
@@ -11,17 +11,17 @@
     <h2><a href="/board/list">게시판</a></h2>
     <h4>게시판 VIEW</h4>
     <ul>
-        <li>글번호 : {{idx}}</li>
-        <li>제목 : {{subject}}</li>
-        <li>작성자 : {{nickname}}</li>
-        <li>작성일 : {{date}}</li>
-        <li>조회수 : {{hit}}</li>
-        <li>내용 : {{content}}</li>
+        <li>글번호 : {{item.idx}}</li>
+        <li>제목 : {{item.subject}}</li>
+        <li>작성자 : {{item.nickname}}</li>
+        <li>작성일 : {{item.date}}</li>
+        <li>조회수 : {{item.hit}}</li>
+        <li>내용 : {{item.content}}</li>
     </ul>
     <a href="/board/list">목록가기</a>
     {% if checkUser %}
-    <a href="/board/delete?idx={{idx}}">글 삭제</a>
-    <a href="/board/update?idx={{idx}}">글 수정</a>
+    <a href="/board/delete?idx={{item.idx}}">글 삭제</a>
+    <a href="/board/update?idx={{item.idx}}">글 수정</a>
     {% endif %}
     
 </body>
