--- a/views/user/profile.html
+++ b/views/user/profile.html
@@ -10,11 +10,11 @@
     <h1><a href="/">LOGO</a></h1>
     <h2>프로필페이지</h2>
     <ul>
-        <li>아이디 : {{userId}}</li>
-        <li>이름 : {{userName}}</li>
-        <li>성별 : {{gender}}</li>
-        <li>전화번호 : {{number}}</li>
-        <li>핸드폰번호 : {{phoneNumber}}</li>
+        <li>아이디 : {{item.userId}}</li>
+        <li>이름 : {{item.userName}}</li>
+        <li>성별 : {{item.gender}}</li>
+        <li>전화번호 : {{item.number}}</li>
+        <li>핸드폰번호 : {{item.phoneNumber}}</li>
     </ul>
     <a href="/">메인으로 돌아가기</a>
 </body>
