--- a/views/user/welcome.html
+++ b/views/user/welcome.html
@@ -11,11 +11,11 @@
     <h2>가입을 환영합니다</h2>
     <b>입력한 정보를 확인해주세요</b>
     <ul>
-        <li>아이디 : {{userId}}</li>
-        <li>이름 : {{userName}}</li>
-        <li>성별 : {{gender}}</li>
-        <li>전화번호 : {{number}}</li>
-        <li>핸드폰번호 : {{phoneNumber}}</li>
+        <li>아이디 : {{item.userId}}</li>
+        <li>이름 : {{item.userName}}</li>
+        <li>성별 : {{item.gender}}</li>
+        <li>전화번호 : {{item.number}}</li>
+        <li>핸드폰번호 : {{item.phoneNumber}}</li>
     </ul>
     <a href="/">메인으로 돌아가기</a>
 </body>
