--- a/views/board/_boardLayout.html
+++ b/views/board/_boardLayout.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="wrap">
-        <h1><a href="/">LOGO</a></h1>s
+        <h1><a href="/">LOGO</a></h1>
         <div id="content">
             <h2><a href="/board/list">게시판</a></h2>
             {% block content%}
