--- a/views/user/login.html
+++ b/views/user/login.html
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1><a href="/">LOGO</a></h1>
+{% extends "./_layout.html" %}
+{% block content %}
+<div id="login-content">
     <h2>로그인</h2>
     <form method="post" action="/user/login">
-        <ul>
-            <li>아이디 <input type="text" name="userId"></li>
-            <li>비밀번호 <input type="password" name="userPw"></li>
+        <ul id="loginSpace">
+            <li><input type="text" name="userId" placeholder="아이디"></li>
+            <li><input type="password" name="userPw" placeholder="패스워드"></li>
         </ul>
-        <input type="submit" value="로그인">
+        <input id="btn" type="submit" value="로그인">
     </form>
-</body>
-</html>
+</div>
+{% endblock %}
