--- a/views/board/view.html
+++ b/views/board/view.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1><a href="/">LOGO</a></h1>
+{% extends "./_layout.html" %}
+{% block content %}
+<div id="list-content">
     <h2><a href="/board/list">게시판</a></h2>
     <h4>게시판 VIEW</h4>
     <ul>
@@ -23,6 +16,5 @@
     <a href="/board/delete?idx={{item.idx}}">글 삭제</a>
     <a href="/board/update?idx={{item.idx}}">글 수정</a>
     {% endif %}
-    
-</body>
-</html>
+</div>
+{% endblock %}
