--- a/views/board/write.html
+++ b/views/board/write.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1><a href="/">LOGO</a></h1>
+{% extends "./_layout.html" %}
+{% block content %}
+<div id="list-content">
     <h2><a href="/board/list">게시판</a></h2>
     <h4>글쓰기</h4>
     <form method="post" action="/board/write">
@@ -18,5 +11,5 @@
         <input type="submit">
     </form>
     내용부분의 인풋박스는 textarea로 변경예정
-</body>
-</html>
+</div>
+{% endblock %}
