게시판write했을때 idx값 추가

--- a/views/board/update.html
+++ b/views/board/update.html
@@ -9,7 +9,7 @@
             <li>제목 : <input type="text" name="subject" value="{{item.subject}}"></li>
             <li>내용 : <input type="text" name="content" value="{{item.content}}"></li>
         </ul>
-        <input type="submit">
+        <input type="submit" value="수정하기">
     </form>
 </div>
 {% endblock %}
