--- a/views/board/write.html
+++ b/views/board/write.html
@@ -5,6 +5,7 @@
     <h4>글쓰기</h4>
     <form method="post" action="/board/write">
         <ul>
+            <li><input type="hidden" name="idx"></li>
             <li>제목 : <input type="text" name="subject"></li>
             <li>내용 : <input type="text" name="content"></li>
         </ul>
