--- a/public/styleBoard.css
+++ b/public/styleBoard.css
@@ -8,56 +8,194 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    align-items: center;
     background: #F4EFEA;
     z-index: 1;
 }
 
 #list-content > h2 {
+    padding: 5vh 0;
+}
+
+#list-content > h2 > a {
     font-size : 50px;
     color: #9A161F;
-    padding: 2vw;
     margin: 5vh 0;
     text-align: center;
 }
 
-#list-content > form {
-    width: 30vw;
-    margin: 10px auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
-
-#loginSpace > li {
-    width: 300px;
-    height: 50px;
-    border: 2px solid #9A161F;
-    border-radius: 10px;
-    margin: 15px auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#loginSpace > li > input{ 
-    outline-style: none;
-    border: none;
-    background-color: #F4EFEA;
-    width: 250px;
+.btn {
+    display: block;
+    width: 100px;
     height: 40px;
-    font-size: 20px;
-}
-
-#list-content > form > #btn {
-    width: 300px;
-    height: 60px;
     background: #9A161F;
     font-size: 20px;
     border: none;
     border-radius: 10px;
     color: #F4EFEA;
     margin-top: 20px;
+    text-align: center;
+    line-height: 40px;
 }
 
 
+#list-content > table {
+    width: 70vw;
+    border-collapse: collapse;
+}
+
+.title .article {
+    display: flex;
+    justify-content: space-around;
+}
+
+.title > td {
+    padding: 20px 10px;
+    border-bottom: 2px solid #9A161F;
+    background-color: rgba(154, 22, 31, 0.3);
+    text-align: center;
+}
+
+.article > td {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #9A161F;
+    
+}
+
+.idx {
+    width: 100px;
+    height: 30px;
+    text-align: center;
+}
+
+.subject {
+    width: 500px;
+    height: 30px;
+    padding-left: 20px ;
+}
+
+.subject > a {
+    color: black;
+}
+
+.nickname {
+    width: 120px;
+    height: 30px;
+    text-align: center;
+}
+
+.date {
+    width: 120px;
+    height: 30px;
+    text-align: center;
+}
+
+.hit {
+    width: 100px;
+    height: 30px;
+    text-align: center;
+}
+
+#page {
+    margin: 30px 0;
+    display: flex;
+}
+
+#page > li > a {
+    display: inline-block;
+    border: 1px solid #9A161F;
+    width: 30px;
+    text-align: center;
+    padding: 5px 0;
+    cursor: pointer;
+    margin: 0 10px;
+}
+
+#page > li > a:hover {
+    display: inline-block;
+    border: 1px solid #9A161F;
+    background: rgba(154, 22, 31, 0.3);
+    width: 30px;
+    text-align: center;
+    padding: 5px 0;
+}
+
+
+
+
+/* view 페이지 */
+#view {
+    width: 70vw;
+    border: 1px solid #9A161F;
+    margin-top: 20px;
+    padding: 30px;
+}
+
+
+
+
+
+
+/* write 페이지 */
+#write-content {
+    width: 100vw;
+    padding: 120px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    background: #F4EFEA;
+    z-index: 1;
+}
+
+#write-content > h2 {
+    padding: 5vh 0;
+}
+
+#write-content > h2 > a {
+    font-size : 50px;
+    color: #9A161F;
+    margin: 5vh 0;
+    text-align: center;
+}
+
+#write-content > form > ul {
+    margin-top: 30px;
+}
+
+#write-content > form > ul > li{
+    margin: 10px 0;
+}
+
+#write-content > form > ul > li > p {
+    font-size: 25px;
+    font-weight: bold;
+    padding: 10px;
+}
+
+#subjectInput {
+    width: 70vw;
+    height: 50px;
+    border: 1px solid #9A161F;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #ffffff;
+    margin-bottom: 30px;
+}
+
+#subjectInput > input {
+    width: 65vw;
+    height: 40px;
+    outline-style: none;
+    border: none;
+    font-size: 20px;
+}
+
+textarea {
+    width: 70vw;
+    height: 50vh;
+    font-size: 15px;
+    padding: 20px;
+}
