--- a/views/board/update.html
+++ b/views/board/update.html
@@ -1,15 +1,23 @@
 {% extends "./_layout.html" %}
 {% block content %}
-<div id="list-content">
+<div id="write-content">
     <h2><a href="/board/list">게시판</a></h2>
-    <h4>글수정</h4>
-    <form method="post" action="/board/update?idx={{idx}}">
+    <form method="post" action="/board/write">
+        <input type="hidden" name="idx" value="{{item.idx}}">
         <ul>
-            <li>글번호 : {{item.idx}}<input type="hidden" name="idx" value="{{item.idx}}"></li>
-            <li>제목 : <input type="text" name="subject" value="{{item.subject}}"></li>
-            <li>내용 : <input type="text" name="content" value="{{item.content}}"></li>
+            <li>
+                <p>제목</p>
+                <div id="subjectInput">
+                    <input type="text" name="subject" value="{{item.subject}}">
+                </div>
+            </li>
+            <li></li>
+            <li>
+                <p>내용</p>
+                <textarea name="content" id="content" cols="50" rows="10" value="{{item.content}}"></textarea>
+            </li>
         </ul>
-        <input type="submit">
+        <input type="hidden" name="nickname" value="{{nickname}}">
+        <input class="btn" type="submit" value="작성">
     </form>
-</div>
 {% endblock %}
