--- a/views/board/update.html
+++ b/views/board/update.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div id="write-content">
     <h2><a href="/board/list">게시판</a></h2>
-    <form method="post" action="/board/write">
+    <form method="post" action="/board/update">
         <input type="hidden" name="idx" value="{{item.idx}}">
         <ul>
             <li>
