--- a/public/styleAdmin.css
+++ b/public/styleAdmin.css
@@ -2,21 +2,141 @@ td {
     padding: 20px;
 }
 
-#login-content {
+#admin-content {
     height: 100vh;
     width: 100vw;
-    padding: 300px;
+    padding: 120px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    align-items: center;
     background: #F4EFEA;
     z-index: 1;
 }
 
-#login-content > h2 {
+#admin-content > h2 {
     font-size : 50px;
     color: #9A161F;
     padding: 2vw;
     margin: 5vh 0;
+    text-align: center;
+}
+
+.btn {
+    display: block;
+    width: 100px;
+    height: 40px;
+    background: #9A161F;
+    font-size: 20px;
+    border: none;
+    border-radius: 10px;
+    color: #F4EFEA;
+    margin-top: 20px;
+    text-align: center;
+    line-height: 40px;
+}
+
+#admin-content > form > table {
+    width: 70vw;
+    border-collapse: collapse;
+}
+
+.title .article {
+    display: flex;
+    justify-content: space-around;
+}
+
+.title > td {
+    padding: 20px 10px;
+    border-bottom: 2px solid #9A161F;
+    background-color: rgba(154, 22, 31, 0.3);
+    text-align: center;
+}
+
+.article > td {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #9A161F;
+    
+}
+
+.idx {
+    width: 100px;
+    height: 30px;
+    text-align: center;
+}
+
+.subject {
+    width: 500px;
+    height: 30px;
+    padding-left: 20px ;
+}
+
+.subject > a {
+    color: black;
+}
+
+.nickname {
+    width: 120px;
+    height: 30px;
+    text-align: center;
+}
+
+.date {
+    width: 150px;
+    height: 30px;
+    text-align: center;
+}
+
+.hit {
+    width: 100px;
+    height: 30px;
+    text-align: center;
+}
+
+
+
+
+/* User Admin */
+
+
+#admin-content > table {
+    width: 70vw;
+    border-collapse: collapse;
+}
+
+.userId {
+    width: 150px;
+    height: 30px;
+    text-align: center;
+}
+
+.userName {
+    width: 150px;
+    height: 30px;
+    text-align: center;
+}
+
+.nickname {
+    width: 150px;
+    height: 30px;
+    text-align: center;
+}
+
+.level {
+    width: 150px;
+    height: 30px;
+    text-align: center;
+}
+
+.active {
+    width: 150px;
+    height: 30px;
+    text-align: center;
+}
+
+.smallBtn {
+    width: 100px;
+    height: 30px;
     text-align: center;
 }
