--- a/views/admin/_layout.html
+++ b/views/admin/_layout.html
@@ -21,7 +21,8 @@
                     <li><a href="/user/logout">로그아웃</a></li>
                     <li><a href="/user/profile">마이페이지</a></li>
                     <li><a href="/board/list">게시판</a></li>
-                    <li><a href="/admin">관리자페이지</a></li>
+                    <li><a href="/admin/user">유저관리자페이지</a></li>
+                    <li><a href="/admin/board">게시판관리자페이지</a></li>
                     <li><a href="/user/login">LOGIN</a></li>
                     <li><a href="/user/join">JOIN</a></li>
                 </ul>
