--- a/public/styleMain.css
+++ b/public/styleMain.css
@@ -28,6 +28,10 @@ a {text-decoration: none;}
     z-index: 3;
 }
 
+#header.background {
+    background: red;
+}
+
 #header > h1 > a {
     color: #9A161F;
     font-size: 40px;
