헤더에 스크롤 이벤트 추가

--- a/views/user/_layout.html
+++ b/views/user/_layout.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../styleMain.css" type="text/css">
     <link rel="stylesheet" href="../styleUser.css" type="text/css">
-    <script defer scr="./script.js" type="text/javascript"></script>
+    <script defer src="../script.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="wrap">
