--- a/public/styleMain.css
+++ b/public/styleMain.css
@@ -29,7 +29,7 @@ a {text-decoration: none;}
 }
 
 #header.background {
-    background: red;
+    border-bottom: 2px solid #9A161F;
 }
 
 #header > h1 > a {
