--- a/views/board/write.html
+++ b/views/board/write.html
@@ -17,7 +17,7 @@
             </li>
             <li><input type="hidden" name="idx"></li>
         </ul>
-        <input type="hidden" name="nickname" value="{{nickname}}">
+        <!-- <input type="hidden" name="nickname" value="{{nickname}}"> -->
         <input class="btn" type="submit" value="작성">
     </form>
 </div>
