--- a/public/styleBoard.css
+++ b/public/styleBoard.css
@@ -9,7 +9,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    background: #F4EFEA;
+    background: #000084;
     z-index: 1;
 }
 
@@ -19,7 +19,7 @@
 
 #list-content > h2 > a {
     font-size : 50px;
-    color: #9A161F;
+    color: #ffffff;
     margin: 5vh 0;
     text-align: center;
 }
@@ -28,11 +28,11 @@
     display: block;
     width: 100px;
     height: 40px;
-    background: #9A161F;
+    background: #ffffff;
     font-size: 20px;
     border: none;
     border-radius: 10px;
-    color: #F4EFEA;
+    color: #000084;
     margin-top: 20px;
     text-align: center;
     line-height: 40px;
@@ -51,15 +51,17 @@
 
 .title > td {
     padding: 20px 10px;
-    border-bottom: 2px solid #9A161F;
-    background-color: rgba(154, 22, 31, 0.3);
+    border-bottom: 2px solid #ffffff;
+    background-color: rgba(190, 190, 190, 0.3);
     text-align: center;
+    color: #ffffff;
 }
 
 .article > td {
     padding-top: 20px;
     padding-bottom: 20px;
-    border-bottom: 1px solid #9A161F;
+    border-bottom: 1px solid #ffffff;
+    color: #ffffff;
     
 }
 
@@ -76,7 +78,7 @@
 }
 
 .subject > a {
-    color: black;
+    color: #ffffff;
 }
 
 .nickname {
@@ -104,18 +106,19 @@
 
 #page > li > a {
     display: inline-block;
-    border: 1px solid #9A161F;
+    border: 1px solid #ffffff;
     width: 30px;
     text-align: center;
     padding: 5px 0;
     cursor: pointer;
     margin: 0 10px;
+    color: #ffffff;
 }
 
 #page > li > a:hover {
     display: inline-block;
-    border: 1px solid #9A161F;
-    background: rgba(154, 22, 31, 0.3);
+    border: 1px solid #ffffff;
+    background: rgba(190, 190, 190, 0.3);
     width: 30px;
     text-align: center;
     padding: 5px 0;
@@ -127,7 +130,7 @@
 /* view 페이지 */
 #view {
     width: 70vw;
-    border: 1px solid #9A161F;
+    border: 1px solid #ffffff;
     margin-top: 20px;
     padding: 30px;
 }
@@ -145,7 +148,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    background: #F4EFEA;
+    background: #000084;
     z-index: 1;
 }
 
@@ -155,7 +158,7 @@
 
 #write-content > h2 > a {
     font-size : 50px;
-    color: #9A161F;
+    color: #ffffff;
     margin: 5vh 0;
     text-align: center;
 }
@@ -172,17 +175,19 @@
     font-size: 25px;
     font-weight: bold;
     padding: 10px;
+    color: #ffffff;
 }
 
 #subjectInput {
     width: 70vw;
     height: 50px;
-    border: 1px solid #9A161F;
+    border: 1px solid #ffffff;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #ffffff;
+    background-color: #000084;
     margin-bottom: 30px;
+    background: #ffffff;
 }
 
 #subjectInput > input {
@@ -191,6 +196,7 @@
     outline-style: none;
     border: none;
     font-size: 20px;
+    color: #666666;
 }
 
 textarea {
