--- a/public/styleUser.css
+++ b/public/styleUser.css
@@ -8,13 +8,13 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    background: #F4EFEA;
+    background: #000084;
     z-index: 1;
 }
 
 #login-content > h2 {
     font-size : 50px;
-    color: #9A161F;
+    color: #ffffff;
     padding: 2vw;
     margin: 5vh 0;
     text-align: center;
@@ -32,7 +32,8 @@
 #loginSpace > li {
     width: 300px;
     height: 50px;
-    border: 2px solid #9A161F;
+    border: 2px solid #ffffff;
+    background: #ffffff;
     border-radius: 10px;
     margin: 15px auto;
     display: flex;
@@ -43,7 +44,7 @@
 #loginSpace > li > input{ 
     outline-style: none;
     border: none;
-    background-color: #F4EFEA;
+    background-color: #ffffff;
     width: 250px;
     height: 40px;
     font-size: 20px;
@@ -52,12 +53,13 @@
 #login-content > form > #btn {
     width: 300px;
     height: 60px;
-    background: #9A161F;
-    font-size: 20px;
+    background: #ffffff;
+    font-size: 30px;
     border: none;
     border-radius: 10px;
-    color: #F4EFEA;
+    color: #000084;
     margin-top: 20px;
+    font-weight: bolder;
 }
 
 
@@ -78,13 +80,13 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    background: #F4EFEA;
+    background: #000084;
     z-index: 1;
 }
 
 #join-content > h2 {
     font-size : 50px;
-    color: #9A161F;
+    color: #ffffff;
     padding: 3vw;
     text-align: center;
     margin-bottom: 50px;
@@ -103,11 +105,11 @@
 #join-content > form > #btn {
     width: 300px;
     height: 60px;
-    background: #9A161F;
-    font-size: 20px;
+    background: #ffffff;
+    font-size: 30px;
     border: none;
     border-radius: 10px;
-    color: #F4EFEA;
+    color: #000084;
     margin-top: 20px;
     cursor: pointer;
 }
@@ -124,26 +126,26 @@
 }
 
 #join-menu > li > p{
-    color: #9A161F;
+    color: #ffffff;
     font-weight: bold;
 }
  
 #join-menu > li > .menu-content{
     width: 500px;
     height: 50px;
-    border: 1px solid #9A161F;
+    border: 1px solid #ffffff;
     border-radius: 5px;
     margin: 10px auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(154, 22, 31, 0.3);
+    background-color: rgba(190,190,190, 0.3);
 }
 
 .menu-content > input {
     outline-style: none;
     border: none;
-    background-color: rgba(154, 22, 31, 0);
+    background-color: rgba(190,190,190, 0);
     width: 400px;
     height: 40px;
     font-size: 20px;
@@ -152,7 +154,7 @@
 .menu-content > #select-gender {
     outline-style: none;
     border: none;
-    background-color: rgba(154, 22, 31, 0);
+    background-color: rgba(190,190,190, 0);
     width: 400px;
     height: 40px;
     font-size: 20px;
@@ -171,13 +173,13 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    background: #F4EFEA;
+    background: #000084;
     z-index: 1;
 }
 
 #welcome-content > h2 {
     font-size : 50px;
-    color: #9A161F;
+    color: #ffffff;
     padding: 3vw;
     text-align: center;
     margin-bottom: 0px;
@@ -185,7 +187,7 @@
 
 #welcome-content > b {
     font-size : 20px;
-    color: #9A161F;
+    color: #ffffff;
     text-align: center;
     margin-bottom: 50px;
 }
@@ -197,16 +199,17 @@
 #welcome-content > ul > li{
     font-size: 20px;
     margin: 10px;
+    color: #ffffff;
 }
 
 #welcome-content > a {
     width: 300px;
     height: 60px;
-    background: #9A161F;
+    background: #ffffff;
     font-size: 20px;
     border: none;
     border-radius: 10px;
-    color: #F4EFEA;
+    color: #000084;
     margin-top: 20px;
     text-align: center;
     line-height: 60px;
