--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,10 @@
 {% extends "./_layout.html" %}
 {% block content %}
-<div id="main-content"><p>슬라이드</p></div>
+<div id="main-content">
+    <div id="slideDiv">
+        <ul>
+            <li>안녕</li>
+        </ul>
+    </div>
+</div>
 {% endblock %}
