--- a/views/user/_layout.html
+++ b/views/user/_layout.html
@@ -16,15 +16,15 @@
             <ul id="menu">
                 <input type="checkbox" id="navi-flag">
                 <label id="hamburger" for="navi-flag">
-                    <div id="hbgdiv"><img src="../img/hamburger.png" alt=""></div>
+                    <div id="hbgdiv"><img src="../img/icon.svg" alt=""></div>
                 </label>
                 <ul id="navimenu">
                     {% if checkLogin %}
-                    <li><a href="/user/logout">로그아웃</a></li>
-                    <li><a href="/user/profile">마이페이지</a></li>
-                    <li><a href="/board/list">게시판</a></li>
-                    <li><a href="/admin/user">유저관리자페이지</a></li>
-                    <li><a href="/admin/board">게시판관리자페이지</a></li>
+                    <li><a href="/user/logout">LOGOUT</a></li>
+                    <li><a href="/user/profile">MY PAGE</a></li>
+                    <li><a href="/board/list">BOARD</a></li>
+                    <li><a href="/admin/user">ADMIN-USER</a></li>
+                    <li><a href="/admin/board">ADMIN-BOARD</a></li>
                     {% else %}
                     <li><a href="/user/login">LOGIN</a></li>
                     <li><a href="/user/join">JOIN</a></li>
