메인화면 js 추가. 로고 로딩처리, 버튼 슬라이드

--- a/views/index.html
+++ b/views/index.html
@@ -1,9 +1,20 @@
 {% extends "./_layout.html" %}
 {% block content %}
 <div id="main-content">
+    <div id="selectDiv">
+        <button id="btn1">TEAM 5</button>
+        <button id="btn2">태 찬</button>
+        <button id="btn3">한 빈</button>
+        <button id="btn4">현 진</button>
+        <button id="btn5">화 섭</button>
+    </div>
     <div id="slideDiv">
         <ul>
-            <li>안녕</li>
+            <li>TEAM5 <span class="blink" >«</span></p></li>
+            <li>태찬 <span class="blink" >«</span></p></li>
+            <li>한빈 <span class="blink" >«</span></p></li>
+            <li>현진 <span class="blink" >«</span></p></li>
+            <li>화섭 <span class="blink" >«</span></p></li>
         </ul>
     </div>
 </div>
