--- a/views/_layout.html
+++ b/views/_layout.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styleMain.css" type="text/css">
-    <script src="./script.js" type="text/javascript"></script>
+    <script defer src="./script.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="wrap">
         <div id="header">
-            <h1><a href="/">LOGO</a></h1>
+            <h1><a href="/">LOGO <div id="logotr"></div></a></h1>
             <ul id="menu">
                 <input type="checkbox" id="navi-flag">
                 <label id="hamburger" for="navi-flag">
@@ -34,5 +34,6 @@
         {% block content %}
         {% endblock %}
     </div>
+    
 </body>
 </html>
