--- a/views/admin/_layout.html
+++ b/views/admin/_layout.html
@@ -7,11 +7,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="../styleMain.css" type="text/css">
     <link rel="stylesheet" href="../styleAdmin.css" type="text/css">
+    <script defer src="../script.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="wrap">
         <div id="header">
-            <h1><a href="/">LOGO</a></h1>
+            <h1><a href="/">LOGO<div id="logotr"></div></a></h1>
             <ul id="menu">
                 <input type="checkbox" id="navi-flag">
                 <label id="hamburger" for="navi-flag">
