--- a/views/user/_layout.html
+++ b/views/user/_layout.html
@@ -12,7 +12,7 @@
 <body>
     <div id="wrap">
         <div id="header">
-            <h1><a href="/">LOGO</a></h1>
+            <h1><a href="/">LOGO<div id="logotr"></div></a></h1>
             <ul id="menu">
                 <input type="checkbox" id="navi-flag">
                 <label id="hamburger" for="navi-flag">
