--- a/views/user/profile.html
+++ b/views/user/profile.html
@@ -3,8 +3,8 @@
 <div id="welcome-content">
     <h2>프로필페이지</h2>
     <ul>
-        <li>아이디 : {{item.userId}}</li>
-        <li>이름 : {{item.userName}}</li>
+        <li>아이디 : {{item.userid}}</li>
+        <li>이름 : {{item.username}}</li>
         <li>닉네임 : {{item.nickname}}</li>
         <li>성별 : {{item.gender}}</li>
         <li>핸드폰번호 : {{item.phoneNumber}}</li>
