게시판 페이징 1차

--- a/views/_layout.html
+++ b/views/_layout.html
@@ -21,7 +21,7 @@
                     {% if checkLogin %}
                     <li><a href="/user/logout">LOGOUT</a></li>
                     <li><a href="/user/profile">MY PAGE</a></li>
-                    <li><a href="/board/list">BOARD</a></li>
+                    <li><a href="/board/list?p=0">BOARD</a></li>
                     <li><a href="/admin/user">ADMIN-USER</a></li>
                     <li><a href="/admin/board">ADMIN-BOARD</a></li>
                     {% else %}
