페이징작업2번째

--- a/views/board/list.html
+++ b/views/board/list.html
@@ -1,7 +1,7 @@
 {% extends "./_layout.html" %}
 {% block content %}
 <div id="list-content">
-    <h2><a href="/board/list">게시판</a></h2>
+    <h2><a href="/board/list?p=0">게시판</a></h2>
     <table>
         <tr class="title">
             <td class="idx">글번호</td>
