--- a/views/board/view.html
+++ b/views/board/view.html
@@ -1,7 +1,7 @@
 {% extends "./_layout.html" %}
 {% block content %}
 <div id="list-content">
-    <h2><a href="/board/list">게시판</a></h2>
+    <h2><a href="/board/list?p=0">게시판</a></h2>
     <table>
         {% for item in list%}
         <tr class="title">
@@ -17,7 +17,7 @@
         <p>{{item.content}}</p>
     </div>
     
-    <a class="btn" href="/board/list">목록가기</a>
+    <a class="btn" href="/board/list?p=0">목록가기</a>
     
     <a class="btn" href="/board/update?idx={{item.idx}}">글 수정</a>
     
