admin 페이지 css 수정, 변수 수정

--- a/public/styleMain.css
+++ b/public/styleMain.css
@@ -315,4 +315,5 @@ a {text-decoration: none;}
 .blink {
     font-size: 20px;
     animation: blink-effect 1s step-end infinite;
+    cursor: pointer;
 }
