--- a/views/admin/adminUser.html
+++ b/views/admin/adminUser.html
@@ -15,7 +15,7 @@
         <tr class="article">
             <form method="post" action="/admin">
                 <td class="userId">{{item.userId}}</td>
-                <td class="userName"><a href="/user/profile">{{item.userName}}</a></td>
+                <td class="userName">{{item.userName}}</a></td>
                 <td class="nickname">{{item.nickname}}</td>
                 <td class="level">{{item.level}}
                     <select name="level" id="select-level">
