--- a/public/styleAdmin.css
+++ b/public/styleAdmin.css
@@ -3,7 +3,7 @@ td {
 }
 
 #admin-content {
-    height: 100vh;
+    /* height: 100vh; */
     width: 100vw;
     padding: 120px;
     display: flex;
