--- a/views/user/profile.html
+++ b/views/user/profile.html
@@ -10,5 +10,9 @@
         <li>핸드폰번호 : {{item.phoneNumber}}</li>
     </ul>
     <a href="/">메인으로 돌아가기</a>
+    <form method="post" action="/user/delete">
+        <input type="hidden" name="userid" value="{{item.userid}}">
+        <input class="btn" type="submit" value="회원탈퇴">
+    </form>
 </div>
 {% endblock %}
