버튼에서 커서모양 바꾸기, 페이징 버튼 처리

--- a/views/board/list.html
+++ b/views/board/list.html
@@ -22,10 +22,11 @@
     </table>
     
     <ul id="page">
-        <!-- 이부분은 for문으로 처리할 예정 -->
         <li><a href="/board/list?p=0">1</a></li>
         <li><a href="/board/list?p=1">2</a></li>
         <li><a href="/board/list?p=2">3</a></li>
+        <li><a href="/board/list?p=2">4</a></li>
+        <li><a href="/board/list?p=2">5</a></li>
     </ul>
     <a class='btn' href="/board/write">글쓰기</a>
 </div>
