--- a/views/user/profile.html
+++ b/views/user/profile.html
@@ -10,7 +10,7 @@
         <li>핸드폰번호 : {{item.phoneNumber}}</li>
     </ul>
     <a href="/">메인으로 돌아가기</a>
-    <form method="post" action="/user/delete">
+    <form method="post" action="/user/userDelete">
         <input type="hidden" name="userid" value="{{item.userid}}">
         <input class="btn" type="submit" value="회원탈퇴">
     </form>
